source-codes/python/bhnEKnJXTcUkUmfJbJYp2QqWBu92/Fjw-J/error.txt
  File "/source/main.py", line 1
    print("hello nai";
                     ^
SyntaxError: invalid syntax
